# bazel-chisel-demo

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  PROJECT_STRUCTURE.md  README.md  WORKSPACE  maven_install.json  projectview.bazelproject
.github/workflows/: ci.yaml
docs/: CHECKLIST.md  MIGRATION.md  README.md  STATUS.md  SUMMARY.md  quick_test.sh  test_migration.sh
eda/: BUILD  constraint.sdc
eda/openroad/: BUILD  constraint.sdc
hdl/chisel/src/demo/: BUILD  counter.scala
rules/: BUILD  chisel.bzl  repo.bzl  rules_hdl_overrides.MODULE.bazel
rules/build_settings/: BUILD
rules/lib/: BUILD
rules/mezel/: BUILD
tests/verilator_cpp/: BUILD  counter.cc
