"""MODULE.bazel"""

module(
    name = "bazel_chisel",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

include("//rules:rules_hdl_overrides.MODULE.bazel") # rules_hdl, see https://github.com/hdl/bazel_rules_hdl/issues/336

# Configure LLVM toolchain (required by OpenROAD and other dependencies)
bazel_dep(name = "toolchains_llvm", version = "1.5.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# QT for OpenROAD GUI
bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "90cfbab79df93960c5493f8a75df6199fb80fe26",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

# Shell
bazel_dep(name = "rules_shell", version = "0.6.1")



# Scala
bazel_dep(name = "rules_scala", version = "7.1.5")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.17")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

scala_deps.scala()

scala_deps.scalatest()

# Register custom Scala toolchain with SemanticDB enabled
register_toolchains("//:semanticdb_toolchain")

bazel_dep(name = "rules_jvm_external", version = "6.8")

# Chisel
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.chipsalliance:chisel_2.13:7.1.1",
        "org.chipsalliance:chisel-plugin_2.13.11:7.1.1",
        "org.scalatest:scalatest_2.13:3.2.19",
        "edu.berkeley.cs:firrtl_2.13:5.0.0",
        "org.antlr:antlr4-runtime:4.13.1",
        "net.java.dev.jna:jna:5.14.0",
    ],
    repositories = [
        "https://maven.aliyun.com/repository/public",
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
    known_contributing_modules = ["bazel_chisel", "or-tools", "protobuf"],
)
use_repo(maven, "maven")

http_archive(
    name = "llvm_firtool",
    urls = ["https://repo1.maven.org/maven2/org/chipsalliance/llvm-firtool/1.114.0/llvm-firtool-1.114.0.jar"],
    build_file = "//third_party/llvm-firtool:BUILD.bazel",
    sha256 = "f93a831e6b5696df2e3327626df3cc183e223bf0c9c0fddf9ae9e51f502d0492",
)
